# Suzuki-Kasami-DistributedAlgorithm-

./: CMakeLists.txt  Makefile  README.md  commit  commit.sh~  commit~  config.txt  node.c  node.h
ABD/: CMakeLists.txt  readme.md  session.sh
ABD/src/: cli  client.c  client.h  client.log~  dir  direc  directory.c  directory.h  makefile  run.sh  run.sh~  text.txt
Client/: Makefile  Makefile~  README.md  client.c  client.c~  icli
FTP/: CMakeLists.txt
FTP SERVER/: CMakeLists.txt  ftpserver.c~
FTP SERVER/src/FTP_Client/: cli  client.c
FTP SERVER/src/Replica/: a.out  sample3.txt  ser  server.c
FTP/src/: client.c
FTP/src/FTP_Client/: cli  client.c
FTP/src/Replica/: sample2.txt  ser  server.c
SFTP/sftp_cli/: sftp_cli.c
SFTP/sftp_rep/: sample2.txt
SFTP/src/: sample.txt~
SFTP/src/sftp_cli/: cli  sftp_cli.c  sftp_cli.h
SFTP/src/sftp_rep/: makefile  ser  sftp_rep.c
temp/: fun  fun.c  fun.h  fun.h~
